--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
+</head>
 <body>
-<span>hello world</span>
-<body>
+  <div>Hello World</div>
+</body>
 </html>
